<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"

    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <Button
        android:id="@+id/player_1"
        android:text="@string/player_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
    />    

    <Button
        android:id="@+id/player_2"
        android:text="@string/player_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_below="@id/player_1"        
    />    
    
    <Button
        android:id="@+id/play_over_network"
        android:text="@string/play_over_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_below="@id/player_2"        
    />      
    
	
	<com.google.android.gms.ads.AdView android:id="@+id/ad_two_player"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        ads:adUnitId="a14c4786f7a05ac"
		ads:adSize="BANNER"
        android:layout_alignParentBottom="true" />
        <!-- ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
        ads:loadAdOnCreate="true" -->
    
</RelativeLayout>
