<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2010 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:myapp="http://schemas.android.com/apk/res-auto"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"	
	
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
     	android:id="@+id/token_selector_explanation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:text="@string/wild_card_explanation"
		android:textColor="@android:color/primary_text_dark"
    	android:textSize="15sp"
    	android:shadowDx="2.0"
    	android:shadowDy="2.0"
    	android:shadowRadius="1.8"
    	android:layout_margin="5dip"
    	android:shadowColor="@android:color/background_dark"            
        />

    <Button
        android:id="@+id/start_x"
        android:text="@string/start_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"        
        android:layout_below="@id/token_selector_explanation"             
        />
        
    <Button
        android:id="@+id/start_o"
        android:text="@string/start_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_below="@id/start_x"          
        />

    <com.google.android.gms.ads.AdView android:id="@+id/ad_token_selector"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        ads:adUnitId="a14c4786f7a05ac"
        ads:adSize="BANNER"
        android:layout_alignParentBottom="true" />
        <!-- ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
        ads:loadAdOnCreate="true" -->



</RelativeLayout>

