<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project Licensed under the 
	Apache License, Version 2.0 (the "License"); you may not use this file except 
	in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License.
-->

<!-- android:layout_width="match_parent" -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/name_dialog_linlayoutBase"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dip"
        android:layout_weight="0"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="0dip"
            android:layout_weight="0"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/token_size_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:gravity="left"
                android:text="@string/token_size_smallest"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:layout_weight="0"
			android:layout_centerHorizontal="true"            
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/token_size_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:gravity="center"
                android:text="@string/token_size_medium"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dip"
            android:layout_weight="0"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/token_size_view3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:gravity="right"
                android:text="@string/token_size_largest"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

</LinearLayout>